--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,92 @@
-.App {
+/* 
+const initialItems = [
+  { id: 1, description: "Passports", quantity: 2, packed: false },
+  { id: 2, description: "Socks", quantity: 12, packed: false },
+];
+*/
+@import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+
+body{
+  font-size: 2.4rem;
+  font-family: sans-serif;
+  color:#5a3e2b;
+  font-family: "Quicksand";
+  font-weight: 500;
+}
+
+.app{
+  width: 100%;
+  height:100vh;
+  display: grid;
+  grid-template-rows: auto auto 1fr auto;
+}
+
+h1{
   text-align: center;
+  background-color: #f4a226;
+  font-family: "Monoton";
+  font-size: 8rem;
+  text-transform: uppercase;
+  font-weight: 400;
+  word-spacing: 30px;
+  letter-spacing: -3px;
+  padding: 2.4rem 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.add-form {
+  background-color: #e5771f;
+  padding: 2.8rem;
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap: 0.8rem;
 }
 
-.App-link {
-  color: #61dafb;
+h3{
+  font-size: 2.4rem;
+  margin-right: 1.8rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.list{
+  background-color: #5a3e2b;
+  padding: 4rem 0;
+  color:  #ffebb3;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  gap: 3.2rem;
+  align-items: center;
+}
+
+.Stats{
+  background-color: #76c7ad;
+  text-align: center;
+  padding: 3.2rem 0;
+  font-weight: 600;
+}
+
+.list ul{
+  list-style: none;
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  justify-content: center;
+  align-content: start;
+}
+
+.list li{
+  display: flex;
+  gap: 1.2rem;
+  align-items: center;
 }
