--- a/src/App.css
+++ b/src/App.css
@@ -6,33 +6,32 @@ const initialItems = [
 */
 @import url("https://fonts.googleapis.com/css2?family=Monoton&family=Quicksand:wght@500;700&display=swap");
 
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-html{
+html {
   font-size: 62.5%;
 }
 
-
-body{
+body {
   font-size: 2.4rem;
   font-family: sans-serif;
-  color:#5a3e2b;
+  color: #5a3e2b;
   font-family: "Quicksand";
   font-weight: 500;
 }
 
-.app{
+.app {
   width: 100%;
-  height:100vh;
+  height: 100vh;
   display: grid;
   grid-template-rows: auto auto 1fr auto;
 }
 
-h1{
+h1 {
   text-align: center;
   background-color: #f4a226;
   font-family: "Monoton";
@@ -40,28 +39,48 @@ h1{
   text-transform: uppercase;
   font-weight: 400;
   word-spacing: 30px;
-  letter-spacing: -3px;
+  letter-spacing: -5px;
   padding: 2.4rem 0;
 }
 
 .add-form {
   background-color: #e5771f;
-  padding: 2.8rem;
+  padding: 2.8rem 0;
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 0.8rem;
 }
 
-h3{
+h3 {
+  margin-right: 1.6rem;
   font-size: 2.4rem;
-  margin-right: 1.8rem;
 }
 
-.list{
+button,
+select,
+input {
+  background-color: #ffebb3;
+  color: #5a3e2b;
+  font-family: inherit;
+  border: none;
+  border-radius: 10rem;
+  padding: 1.2rem 3.2rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.add-form button {
+  text-transform: uppercase;
+  background-color: #76c7ad;
+}
+
+.list {
   background-color: #5a3e2b;
+  color: #ffebb3;
   padding: 4rem 0;
-  color:  #ffebb3;
+
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -69,24 +88,59 @@ h3{
   align-items: center;
 }
 
-.Stats{
-  background-color: #76c7ad;
-  text-align: center;
-  padding: 3.2rem 0;
-  font-weight: 600;
+.actions button,
+.list select {
+  text-transform: uppercase;
+  padding: 0.8rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0 0.8rem;
 }
 
-.list ul{
+.list ul {
   list-style: none;
   width: 80%;
+
   display: grid;
-  grid-template-columns: repeat(auto-fit,minmax(250px,1fr));
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.2rem;
   justify-content: center;
   align-content: start;
 }
 
-.list li{
+.list li {
   display: flex;
-  gap: 1.2rem;
   align-items: center;
+  gap: 1.2rem;
+}
+
+input[type="checkbox"] {
+  height: 2rem;
+  width: 2rem;
+  accent-color: #e5771f;
+}
+
+.list li button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  padding: 0.8rem;
+  transform: translateY(2px);
+}
+
+.stats {
+  background-color: #76c7ad;
+  text-align: center;
+  font-weight: 700;
+  padding: 3.2rem 0;
+}
+
+.list li button {
+  cursor: pointer;
+  background-color: none;
+  border: none;
+  font-size: 1.8rem;
+  padding: 0.8rem;
+  transform: translateY(2px);
 }
